src/test/ui/const-generics/struct-with-invalid-const-param.full.stderr
error[E0573]: expected type, found const parameter `C`
  --> $DIR/struct-with-invalid-const-param.rs:8:23
   |
LL | struct S<const C: u8>(C);
   | ----------------------^--
   | |                     |
   | |                     help: a struct with a similar name exists: `S`
   | similarly named struct `S` defined here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0573`.
